# Rust-Morsecode-Encoder-Decoder

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-build-context-checker.txt  morse-code-decode.json  morse-code-encode.json
OpenFaaS/: README.md  morse-function.yml
OpenFaaS/function/: Cargo.toml
OpenFaaS/function/src/: lib.rs
OpenFaaS/template/rust/: .dockerignore  Dockerfile
OpenFaaS/template/rust/function/src/: lib.rs
OpenFaaS/template/rust/main/: Cargo.toml
OpenFaaS/template/rust/main/src/: main.rs
functions/: Cargo.toml
functions/src/: lib.rs
main/: Cargo.toml  morse-code-encode.json
main/src/: main.rs
src/: main.rs
src/OpenFaaS/: morse-function.yml
src/OpenFaaS/function/: Cargo.toml
src/OpenFaaS/template/rust/: .dockerignore
src/OpenFaaS/template/rust/main/src/: main.rs
